<resources>
    <string name="app_name">Submission 1 : My Github User</string>

    <string name="search">Search</string>
    <string name="user">User</string>
    <string name="username">Username</string>
    <string name="search_hint">Masukkan username</string>
    <string name="nama_user">Nama User</string>
    <string name="username_detail">Username Detail</string>
    <string name="location">Kota</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="value">0</string>
    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dark_mode">Dark Mode </string>
</resources>